working GSheet append using service account. needs more work syncing colunn naming.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,6 @@
 exportPattern("^[[:alpha:]]+")
+import(optparse)
+import(googledrive)
 import(googlesheets4)
 import(data.table)
-import(optparse)
+
